--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 
 .logo {
     position: absolute; bottom: 0px; left: 0px;
-	width: 100%; height: 90px;
+	width: 100%; height: 100%;
 	background: 0 0;
     background-size: auto 50px;
     animation: logo 3s ease-in-out;
@@ -19,15 +19,15 @@
 
 .plane {
 	position: absolute; bottom: 0px; left: 0px;
-	width: 100%; height: 90px;
+	width: 300px; height: 250px;
 	background: 0 0;
-    background-size: auto 90px;
+    background-size: auto 250px;
 	animation: plane 3s infinite linear;
 }
 
 .plane {
     background-image: url(/img/plane.svg);
-	animation-duration: 10s;
+	animation-duration: 4s;
 }
 
 .logo {
@@ -36,7 +36,7 @@
 
 @keyframes plane {
 	0% { background-position: 0 0; }
-	100% { background-position: 728px 0; }
+	100% { background-position: 300px 0; }
 }
 
 @keyframes logo {
